[project]
name = "logspectra"
version = "0.0.2"
description = "Visualization of logarithmic frequency spectrums for audio signals."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jakim" }]

dependencies = [
    "jupyter==1.1.1",
    "librosa==0.11.0",
    "matplotlib==3.10.7",
    "numpy==2.3.4",
    "pydantic==2.12.5",
    "scipy==1.17.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pylint==4.0.3",
    "pylint-pydantic==0.4.1",
]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
files = "logspectra"
disallow_subclassing_any = true
ignore_missing_imports = true
strict = true
